--- a/classorm_1_1Database.html
+++ b/classorm_1_1Database.html
@@ -111,6 +111,10 @@ template&lt;typename T &gt; </td></tr>
 template&lt;typename T &gt; </td></tr>
 <tr class="memitem:a473affe96af0c7a8075b123ec59c8853"><td class="memTemplItemLeft" align="right" valign="top">auto&#160;</td><td class="memTemplItemRight" valign="bottom"><b>insertObjects</b> (const std::vector&lt; T &gt; &amp;objects) -&gt; void</td></tr>
 <tr class="separator:a473affe96af0c7a8075b123ec59c8853"><td class="memSeparator" colspan="2">&#160;</td></tr>
+<tr class="memitem:a7fd1496475387db8af973fe51ceb7d78" id="r_a7fd1496475387db8af973fe51ceb7d78"><td class="memTemplParams" colspan="2"><a id="a7fd1496475387db8af973fe51ceb7d78" name="a7fd1496475387db8af973fe51ceb7d78"></a>
+template&lt;typename T &gt; </td></tr>
+<tr class="memitem:a7fd1496475387db8af973fe51ceb7d78"><td class="memTemplItemLeft" align="right" valign="top">auto&#160;</td><td class="memTemplItemRight" valign="bottom"><b>insertObject</b> (T object) -&gt; void</td></tr>
+<tr class="separator:a7fd1496475387db8af973fe51ceb7d78"><td class="memSeparator" colspan="2">&#160;</td></tr>
 <tr class="memitem:a5dc553baa29a3ec7fd46b81e412ffa5d" id="r_a5dc553baa29a3ec7fd46b81e412ffa5d"><td class="memTemplParams" colspan="2"><a id="a5dc553baa29a3ec7fd46b81e412ffa5d" name="a5dc553baa29a3ec7fd46b81e412ffa5d"></a>
 template&lt;typename T &gt; </td></tr>
 <tr class="memitem:a5dc553baa29a3ec7fd46b81e412ffa5d"><td class="memTemplItemLeft" align="right" valign="top">auto&#160;</td><td class="memTemplItemRight" valign="bottom"><b>createTable</b> () -&gt; void</td></tr>
