--- a/md_docs_2database.html
+++ b/md_docs_2database.html
@@ -103,6 +103,24 @@ $(function(){initNavTree('md_docs_2database.html',''); initResizable(); });
 <li>Insert objects</li>
 <li>Query objects</li>
 </ol>
+<h1><a class="anchor" id="autotoc_md1"></a>
+Connect</h1>
+<p>To connect to database create its object and connect it with standard connection string:</p>
+<div class="fragment"><div class="line"><a class="code hl_class" href="classorm_1_1Database.html">orm::Database</a> database;</div>
+<div class="line">database.<a class="code hl_function" href="classorm_1_1Database.html#a86f01ed300b1a8a7a74bedbf61e45fa2">connect</a>(<span class="stringliteral">&quot;sqlite3://test.db&quot;</span>);</div>
+<div class="ttc" id="aclassorm_1_1Database_html"><div class="ttname"><a href="classorm_1_1Database.html">orm::Database</a></div><div class="ttdoc">A class representing a database in the ORM framework.</div><div class="ttdef"><b>Definition</b> database.hpp:20</div></div>
+<div class="ttc" id="aclassorm_1_1Database_html_a86f01ed300b1a8a7a74bedbf61e45fa2"><div class="ttname"><a href="classorm_1_1Database.html#a86f01ed300b1a8a7a74bedbf61e45fa2">orm::Database::connect</a></div><div class="ttdeci">auto connect(const std::string &amp;connectionString) -&gt; void</div><div class="ttdoc">Connects to a database.</div></div>
+</div><!-- fragment --><h1><a class="anchor" id="autotoc_md2"></a>
+Create table</h1>
+<p>🚧🚧🚧 TODO 🚧🚧🚧 </p>
+<h1><a class="anchor" id="autotoc_md3"></a>
+Delete table</h1>
+<p>🚧🚧🚧 TODO 🚧🚧🚧 </p>
+<h1><a class="anchor" id="autotoc_md4"></a>
+Insert objects</h1>
+<p>🚧🚧🚧 TODO 🚧🚧🚧 </p>
+<h1><a class="anchor" id="autotoc_md5"></a>
+Query objects</h1>
 <p>🚧🚧🚧 TODO 🚧🚧🚧 </p>
 </div></div><!-- contents -->
 </div><!-- PageDoc -->
