--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -38,7 +38,6 @@
 <a href="functions.html"/>
 <a href="functions.html"/>
 <a href="functions.html"/>
-<a href="functions.html"/>
 <a href="functions_func.html"/>
 <a href="functions_func.html"/>
 <a href="functions_func.html"/>
@@ -47,7 +46,7 @@
 <a href="functions_func.html"/>
 <a href="functions_func.html"/>
 <a href="functions_func.html"/>
-<a href="functions_func.html"/>
+<a href="functions_rela.html"/>
 <a href="files.html"/>
 </body>
 </html>
