deploy: 1a6987078081a429b6c5ef0874055600c4ef30ea

--- a/md_docs_2query.html
+++ b/md_docs_2query.html
@@ -133,8 +133,7 @@ Offset select</h1>
 </div><!-- fragment --><h1><a class="anchor" id="autotoc_md16"></a>
 Build select</h1>
 <p>To build select use <code>buildQuery</code> method, it will return string with select:</p>
-<div class="fragment"><div class="line"><span class="keyword">auto</span> queryString = select.<a class="code hl_function" href="classorm_1_1Query.html#a0734f8276645a20545a4a523f24a138e">buildQuery</a>();</div>
-<div class="ttc" id="aclassorm_1_1Query_html_a0734f8276645a20545a4a523f24a138e"><div class="ttname"><a href="classorm_1_1Query.html#a0734f8276645a20545a4a523f24a138e">orm::Query::buildQuery</a></div><div class="ttdeci">auto buildQuery() -&gt; std::string const</div><div class="ttdoc">Builds the select query string.</div><div class="ttdef"><b>Definition</b> query.hpp:56</div></div>
+<div class="fragment"><div class="line"><span class="keyword">auto</span> queryString = select.buildQuery();</div>
 </div><!-- fragment --> </div></div><!-- contents -->
 </div><!-- PageDoc -->
 </div><!-- doc-content -->
