--- a/md_docs_2query.html
+++ b/md_docs_2query.html
@@ -119,17 +119,17 @@ Build select</h1>
 <div class="ttc" id="aclassorm_1_1Query_html"><div class="ttname"><a href="classorm_1_1Query.html">orm::Query</a></div><div class="ttdoc">A template class representing a select query in the ORM framework.</div><div class="ttdef"><b>Definition</b> query.hpp:21</div></div>
 </div><!-- fragment --><p>it is builder class so you can chain methods:</p>
 <div class="fragment"><div class="line"><a class="code hl_class" href="classorm_1_1Query.html">orm::Query&lt;ObjectModel&gt;</a> select;</div>
-<div class="line">select.<a class="code hl_function" href="classorm_1_1Query.html#a8cd9666afaab1ab92763b717520c9aef">limit</a>(10).offset(10);</div>
-<div class="ttc" id="aclassorm_1_1Query_html_a8cd9666afaab1ab92763b717520c9aef"><div class="ttname"><a href="classorm_1_1Query.html#a8cd9666afaab1ab92763b717520c9aef">orm::Query::limit</a></div><div class="ttdeci">auto limit(std::size_t limit)</div><div class="ttdoc">Sets the LIMIT clause for the select query.</div><div class="ttdef"><b>Definition</b> query.hpp:45</div></div>
+<div class="line">select.<a class="code hl_function" href="classorm_1_1Query.html#a73f6efaddec024eed6b8dcd1e71dd4d4">limit</a>(10).offset(10);</div>
+<div class="ttc" id="aclassorm_1_1Query_html_a73f6efaddec024eed6b8dcd1e71dd4d4"><div class="ttname"><a href="classorm_1_1Query.html#a73f6efaddec024eed6b8dcd1e71dd4d4">orm::Query::limit</a></div><div class="ttdeci">auto limit(std::size_t limit) -&gt; Query&lt; T &gt; &amp;</div><div class="ttdoc">Sets the LIMIT clause for the select query.</div><div class="ttdef"><b>Definition</b> query.hpp:45</div></div>
 </div><!-- fragment --><h1><a class="anchor" id="autotoc_md15"></a>
 Limit select</h1>
 <p>To limit select use <code>limit</code> method:</p>
-<div class="fragment"><div class="line">select.<a class="code hl_function" href="classorm_1_1Query.html#a8cd9666afaab1ab92763b717520c9aef">limit</a>(10);</div>
+<div class="fragment"><div class="line">select.<a class="code hl_function" href="classorm_1_1Query.html#a73f6efaddec024eed6b8dcd1e71dd4d4">limit</a>(10);</div>
 </div><!-- fragment --><h1><a class="anchor" id="autotoc_md16"></a>
 Offset select</h1>
 <p>To offset select use <code>offset</code> method:</p>
-<div class="fragment"><div class="line">select.<a class="code hl_function" href="classorm_1_1Query.html#a3ca1c1020f82fbfe09b01dca8e73739f">offset</a>(10);</div>
-<div class="ttc" id="aclassorm_1_1Query_html_a3ca1c1020f82fbfe09b01dca8e73739f"><div class="ttname"><a href="classorm_1_1Query.html#a3ca1c1020f82fbfe09b01dca8e73739f">orm::Query::offset</a></div><div class="ttdeci">auto offset(std::size_t offset)</div><div class="ttdoc">Sets the OFFSET clause for the select query.</div><div class="ttdef"><b>Definition</b> query.hpp:33</div></div>
+<div class="fragment"><div class="line">select.<a class="code hl_function" href="classorm_1_1Query.html#ad277561652627e31187604dd6487fec8">offset</a>(10);</div>
+<div class="ttc" id="aclassorm_1_1Query_html_ad277561652627e31187604dd6487fec8"><div class="ttname"><a href="classorm_1_1Query.html#ad277561652627e31187604dd6487fec8">orm::Query::offset</a></div><div class="ttdeci">auto offset(std::size_t offset) -&gt; Query&lt; T &gt; &amp;</div><div class="ttdoc">Sets the OFFSET clause for the select query.</div><div class="ttdef"><b>Definition</b> query.hpp:33</div></div>
 </div><!-- fragment --><h1><a class="anchor" id="autotoc_md17"></a>
 Build select</h1>
 <p>To build select use <code>buildQuery</code> method, it will return string with select:</p>
