--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -40,6 +40,8 @@
 <a href="functions.html"/>
 <a href="functions.html"/>
 <a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions_func.html"/>
 <a href="functions_func.html"/>
 <a href="functions_func.html"/>
 <a href="functions_func.html"/>
